# bro

./: .gitignore  Cargo.toml  LICENSE  README.md  amp
docs/: api.md  autonomous-ai-plan.md  development.md  example-usecases.md  index.md  readme.md  security.md
src/: .gitignore  ADVANCED_FEATURES.md  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  TEST_SUMMARY.md  index.html  sample_power_user_config.yaml  security_demo.sh  test_autonomous_system.sh  test_feature_flags.rs  test_network_security.rs  test_resource_enforcement.rs  test_runner.sh  test_security_demo.rs  test_tool_safety.rs
src/application/: Cargo.toml
src/application/benches/: performance_benchmarks.rs
src/application/src/: advanced_qdrant.rs  advanced_scheduler.rs  agent_service.rs  build_service.rs  collection_partitioner.rs  context_aware_validator.rs  dynamic_scaling.rs  hallucination_detector.rs  health_monitor.rs  lib.rs  memory_cleanup.rs  memory_dashboard.rs  memory_summarizer.rs  metrics_collector.rs  parallel_agent.rs  rag_service.rs  result_aggregator.rs  semantic_memory.rs  streaming_agent.rs  task_decomposer.rs  transaction.rs  voice_command_processor.rs  voice_processing_service.rs
src/cli/: Cargo.toml
src/docs/: Addressing_AI_Agent_Problems.md  The_Ultimate_End_to_End_Workflow_for_Vibe_CLI.md  advanced_agentic_tui_layout.md  agent_system_implementation_plan.md  agentic_rag_transformation_plan.md  automatic_mode_selection_plan.md  codex_tui_minimalist_plan.md  comprehensive_integration_plan.md  dynamic_system_info_processing_plan.md  elite_agentic_cli_plan.md  expand_tool_registry_dynamic_selection_plan.md  implementation_plan.md  incremental_streaming_improvements.md  multi_step_agent_workflow_plan.md  system_assistant_design_plan.md  ultra_performance_optimization_plan.md  voice_system_integration_plan.md
src/domain/: Cargo.toml
src/domain/src/: lib.rs  models.rs  safety_policy.rs  services.rs
src/domain/src/entities/: mod.rs  recognition_session.rs  voice_command.rs  workflow.rs
src/domain/src/services/: browser_automation.rs  mod.rs  plugin.rs  script_executor.rs  workflow_executor.rs
src/examples/: parallel_build_example.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: agent_control.rs  ast_parser.rs  background_supervisor.rs  browser_automation.rs  chatgpt_browser.rs  chatgpt_ocr.rs  command_interpreter.rs  compilation_watcher.rs  config.rs  embedder.rs  embedding_storage.rs  error_analyzer.rs  expert_resolver.rs  feature_flags.rs  file_scanner.rs  fix_applier.rs  hybrid_storage.rs  input_classifier.rs  lib.rs  log_tailer.rs  lsp_client.rs  network_security.rs  observability.rs  ollama_client.rs  plugin_registry.rs  policy_engine.rs  privacy_controls.rs  prompt_engineer.rs  qdrant_advanced.rs  qdrant_storage.rs  resource_enforcement.rs  safety.rs  sandbox.rs  script_executor.rs  session_store.rs  shell_monitor.rs  smart_router.rs  test_watcher.rs  tools.rs  web_search.rs  (+1 more)
src/infrastructure/src/adapters/: audio_player.rs  keyboard_simulator.rs  microphone.rs  mod.rs  tts_adapter.rs  vosk_adapter.rs
src/infrastructure/src/adapters/screen/: mod.rs  remote_control.rs  sharing.rs
src/infrastructure/src/repositories/: command_repository.rs  command_repository_impl.rs  mod.rs
src/presentation/: Cargo.toml
src/presentation/src/: agent.rs  analysis.rs  cli.rs  confirmation.rs  editor.rs  lib.rs  session.rs  tui.rs  types.rs  utils.rs
src/presentation/src/cli/: agent.rs  background.rs  build_helpers.rs  cache.rs  chat.rs  rag.rs  session.rs  utils.rs  voice.rs
src/presentation/src/web/: mod.rs  state.rs
src/presentation/src/web/handlers/: config.rs  dictation.rs  health.rs  mod.rs  remote.rs  tts.rs
src/presentation/src/web/routes/: mod.rs
src/scripts/: benchmark_performance.py  create_test_embeddings.py  load_test_infrastructure.sh  migrate_to_qdrant.py  performance_analysis.sh  run_performance_tests.sh  test_advanced_qdrant.py  test_health_monitoring.py  test_memory_cleanup.py  test_rag_integration.py  test_semantic_memory.py
src/shared/: Cargo.toml
src/shared/src/: batch_processing.rs  confirmation.rs  content_sanitizer.rs  error.rs  lib.rs  memory_pool.rs  performance.rs  performance_monitor.rs  secrets_detector.rs  types.rs  ultra_fast_cache.rs  ultra_fast_memory.rs  utils.rs  zero_copy.rs
src/src/: agent.rs  main.rs  model.rs  runner.rs  session.rs
src/test_scenarios/: compilation_errors.rs  failing_tests.rs  real_world_scenarios.toml
src/tests/: Cargo.toml  README.md
src/tests/src/: comprehensive_tests.rs  integration_tests.rs  lib.rs  performance_tests.rs  production_tests.rs  security_tests.rs  ultra_minimal_workflow_tests.rs
