[workspace]
resolver = "2"
members = ["src"]

[workspace.package]
name = "bro"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rendi Virgantara Setiawan <rendivirgantarasetiawan123@gmail.com>"]
description = "Voice-Powered AI CLI Assistant - Unified vibespeak and vibe_cli"
repository = "https://github.com/rendivs925/bro"
homepage = "https://github.com/rendivs925/bro"
keywords = ["cli", "ai", "voice", "speech", "automation", "development"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.39", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UI and display
colored = "2.1"
dialoguer = "0.11"
arboard = "3.4"
crossterm = "0.27"
ratatui = "0.26"

# Database and storage
rusqlite = { version = "0.32", features = ["bundled"] }
memmap2 = "0.9"

# Performance and utilities
rayon = "1.10"
smallvec = "1.13"
arrayvec = "0.7"
bumpalo = "3.16"
fxhash = "0.2"
lazy_static = "1.5"

# Compression
lz4 = "1.24"

# Configuration
dotenvy = "0.15"

# Document processing
docx-rs = "0.4"

# AI/ML dependencies
 hf-hub = "0.3"
 tokenizers = "0.19"
 half = { version = "2.4", features = ["std", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Voice processing (from vibespeak)
cpal = "0.15"
vosk = "0.3"
rubato = "0.15"

# WebRTC and networking (from vibespeak)
webrtc = "0.9"
tokio-tungstenite = "0.20"
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Additional utilities
uuid = { version = "1.8", features = ["v4"] }
 rand = "0.8"
 thiserror = "1.0"
 anyhow = "1.0"
base64 = "0.21"
strsim = "0.11.1"
num_cpus = "1.16"
bincode = "1.3"
criterion = { version = "0.5", features = ["html_reports"] }

# Legacy CLI compatibility
async-trait = "0.1"
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true