[package]
name = "bro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bro"
path = "src/main.rs"

[dependencies]
presentation = { path = "../presentation", features = ["tui"] }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
bincode = "1.3"