[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"