[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
anyhow.workspace = true
tokio = { workspace = true, features = ["process"] }
reqwest.workspace = true
rusqlite.workspace = true
memmap2.workspace = true
rayon.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
dotenvy.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
md5 = "0.7"
futures = "0.3"
qdrant-client = "1.7"
tonic = "0.10"
prost = "0.12"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
regex = "1.10"
scraper = "0.18"
url = "2.5"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
shellexpand = "3.1"
num_cpus.workspace = true
lazy_static = "1.4"
sled = "0.34"
 blake3 = "1.5"
 notify = "6.1"
 async-lsp = "0.1"
 tokio-process = "0.2"
 watchexec = "3.0"
 tower-lsp = "0.20"
 flume = "0.11"
 # Browser automation for ChatGPT integration (simplified for now)
 # thirtyfour = "0.32"  # Commented out until full WebDriver implementation
  image = "0.24"
  # Privacy controls and encryption
  aes-gcm = "0.10"
  ring = "0.17"

 # Voice processing dependencies (from vibespeak integration)
 cpal = "0.15"
 vosk = "0.3"
 rubato = "0.15"
 webrtc = "0.9"
 tokio-tungstenite = "0.20"
 axum = { version = "0.7", features = ["ws", "multipart"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
 hyper = { version = "1.0", features = ["full"] }
 uuid = { version = "1.8", features = ["v4"] }
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }
  evdev = "0.12"

