[package]
name = "presentation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
tui = []

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
domain = { path = "../domain" }
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
arboard.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
pdf-extract = "0.7"
docx-rs = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
tokio.workspace = true
git2 = "0.18"
flume = "0.11"
ratatui.workspace = true
crossterm.workspace = true
axum.workspace = true
strsim = "0.11"
tracing.workspace = true
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"