[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
presentation = { path = "../presentation" }
shared = { path = "../shared" }
tokio.workspace = true
serde_json.workspace = true
tempfile = "3.10"
